--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
           
         </header>
 
-        <!-- Fim -->
+        <!-- Fim Cabeçalho -->
 
         <!-- Área de Categorias -->
         
