novas imagens, adicionando rodapé nas páginas de categorias, cirando css das categorias.

--- a/homepage.html
+++ b/homepage.html
@@ -165,7 +165,7 @@
 
             <div> 
                 
-                <h2>Informações importantes</h2>
+                <h2 class="tituloRodape">Informações importantes</h2>
                 <a href="#"><p>Políticas de Envio e Entrega</p></a>
                 <a href="#"><p>Políticas de Privacidade</p></a>
                 <a href="#"><p>Políticas de Troca e Devolução</p></a>
@@ -174,7 +174,7 @@
 
             <div>
 
-                <h2>Termos</h2>
+                <h2 class="tituloRodape">Termos</h2>
                 <a href="#"><p>Aviso Legal</p></a>
                 <a href="#"><p>Fale Conosco</p></a>
 
@@ -187,7 +187,7 @@
 
             <div>
 
-                <h2>Cadastre-se aqui para receber as Novidades</h2>
+                <h2 class="tituloRodape">Cadastre-se aqui para receber as Novidades</h2>
                 <form>
 
                     <input type="email">
@@ -198,9 +198,9 @@
 
             <div>
 
-                <img src="assets/images/whatsapp.svg" alt="">
-                <img src="assets/images/instagram.svg" alt="">
-                <img src="assets/images/tiktok.svg" alt="">
+                <img src="assets/images/whatsapp.svg" alt="" class="figRodape">
+                <img src="assets/images/instagram.svg" alt="" class="figRodape">
+                <img src="assets/images/tiktok.svg" alt="" class="figRodape">
 
             </div>
 
@@ -208,8 +208,8 @@
 
         <div id="creditos">
 
-            <p>Todo os Direitos Reservados || <a href="https://github.com/WigorSilva/" target="_blank"> Wigor S. Gonçalves </a> </p>
-            <p>© ExtraDesconto 2022</p>
+            <p class="creditos">Todo os Direitos Reservados || <a href="https://github.com/WigorSilva/" target="_blank"> Wigor S. Gonçalves </a> </p>
+            <p class="creditos">© ExtraDesconto 2022</p>
 
         </div>
 
