adicionando fonte externa ao site.

--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>ExtraDesconto</title>
         <link rel="stylesheet" href="assets/style/index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -188,9 +189,10 @@
             <div>
 
                 <h2 class="tituloRodape">Cadastre-se aqui para receber as Novidades</h2>
-                <form>
+                <form action="#" method="post">
 
                     <input type="email">
+                    <input type="submit">
 
                 </form>
 
