Editando Area de produtos categorias

--- a/categorias/casa&cozinha.html
+++ b/categorias/casa&cozinha.html
@@ -46,27 +46,92 @@
                     </div>
                 </div>
 
-                <div id="produtos">
+                <div>
+                    <div id="cabecalhoProdutos">
 
-                    <h1>Casa e Jardim</h1>
+                        <h1 class="nome">Casa e Jardim</h1>
 
-                    <div>
-                        <h2>Mostrar:</h2>
-                            <select name="quant">
-                                <option value="1">24 por página</option>
-                                <option value="2">36 por página</option>
-                                <option value="3">48 por página</option>
-                            </select>
+                        <div>
+                            <h2>Mostrar:</h2>
+                                <select name="quant">
+                                    <option value="1">24 por página</option>
+                                    <option value="2">36 por página</option>
+                                    <option value="3">48 por página</option>
+                                </select>
+                        </div>
+                        <div>
+                            <h2>Ordenar Por:</h2>
+                                <select name="ordem">
+                                    <option value="1">Em destaque</option>
+                                    <option value="2">Mais vendidos</option>
+                                    <option value="3">Melhores ofertas</option>
+                                    <option value="4">Maior Valor</option>
+                                    <option value="5">Menor Valor</option>
+                                </select>
+                        </div>
+
                     </div>
-                    <div>
-                        <h2>Ordenar Por:</h2>
-                            <select name="ordem">
-                                <option value="1">Em destaque</option>
-                                <option value="2">Mais vendidos</option>
-                                <option value="3">Melhores ofertas</option>
-                                <option value="4">Maior Valor</option>
-                                <option value="5">Menor Valor</option>
-                            </select>
+
+                    <div id="produtos">
+
+                        <div class="linha">
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                        </div>
+                        <div class="linha">
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                        </div>
+                        <div class="linha">
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                            <div class="produto">
+                                Esse é um produto
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
 
