Copiando página de produtos categorias para todas categorias

--- a/categorias/pets.html
+++ b/categorias/pets.html
@@ -16,14 +16,126 @@
             <img id="listras" src="../assets/images/listras.svg" alt="selecionar categorias">
             <a href="../homepage.html"><img id="logo" src="../assets/images/ExtraDescontos.svg" alt="logo"> </a>
             <img id="pesquisa" src="../assets/images/pesquisa.svg" alt="lupa de pesquisa">
-          
+        
         </header>
 
-        <div class="teste">
+        <section id="section1">
 
+            <div id="menu">
 
+                <h1>Menu Principal</h1>
+                <div id="lista">
+                    <ul>
+                        <a href="../homepage.html"><li>Início</li></a>
+                        <li>Categorias</li>
 
-        </div>
+                            <ul>
+                                <a href="casa&cozinha.html"><li>Casa & Cozinha</li></a>
+                                <a href="eletrodomesticos.html"><li>Eletrodomésticos</li></a>
+                                <a href="eletronicos.html"><li>Eletrônicos</li></a>
+                                <a href="fitness.html"><li>Fitness</li></a>
+                                <a href="gamers.html"><li>Gamers</li></a>
+                                <a href="pets.html"><li>Pets</li></a>
+                            </ul>
+
+                        <li>Ofertas</li>
+                        <li>Acompanhe Seu pedido</li>
+                        <li>Sobre nós</li>
+                        <li>Suporte</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div>
+                <div id="cabecalhoProdutos">
+
+                    <h1 class="nome">Produtos para Pets</h1>
+
+                    <div>
+                        <h2>Mostrar:</h2>
+                            <select name="quant">
+                                <option value="1">24 por página</option>
+                                <option value="2">36 por página</option>
+                                <option value="3">48 por página</option>
+                            </select>
+                    </div>
+                    <div>
+                        <h2>Ordenar Por:</h2>
+                            <select name="ordem">
+                                <option value="1">Em destaque</option>
+                                <option value="2">Mais vendidos</option>
+                                <option value="3">Melhores ofertas</option>
+                                <option value="4">Maior Valor</option>
+                                <option value="5">Menor Valor</option>
+                            </select>
+                    </div>
+
+                </div>
+
+                <div id="produtos">
+
+                    <div class="linha">
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                    </div>
+                    <div class="linha">
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                    </div>
+                    <div class="linha">
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                        <div class="produto">
+                            Esse é um produto
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
         <footer class="rodape">
 
